src/test/testData/AnnotatorTestData.obj
mtllib <warning descr="MTL file not found">tetrahedron.mtl</warning>

v 1.0 1.0 1.0
v 2.0 2.0 2.0
v 3.0 3.0 3.0

vt 0.0 0.0
vt 1.0 0.0
vt 1.0 1.0

vn 0.5 0.5 0.5

usemtl <warning descr="Material not found">Marble</warning>

f 1 2 3
f 1 2 <error descr="Unresolved vertex: 4">4</error>

f 1/1 2/2 3/3
f 1/1 2/2 3/<error descr="Unresolved texture coordinates: 4">4</error>

f 1/1/1 2/2/1 3/3/1
f 1/1/1 2/2/1 3/3/<error descr="Unresolved vertex normal: 2">2</error>

l 1 2 3
l 1 2 <error descr="Unresolved vertex: 4">4</error>

p 1
p <error descr="Unresolved vertex: 4">4</error>